# MinecraftClone

./: .gitmodules  CMakeLists.txt  Config.ini  LICENSE  README.md
Core/: Block.cpp  Block.h
Core/Assets/: TextureLoader.cpp  TextureLoader.h  TexturePaths.h
Core/GL/: ElementBuffer.cpp  ElementBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Core/Game/: Game.cpp  Game.h
Core/Libraries/stb_image/: stb_image.h
Core/Math/: Entity.cpp  Entity.h  Frustum.cpp  Frustum.h  PerlinNoise.cpp  PerlinNoise.h  Plane.cpp  Plane.h  Transform.cpp  Transform.h
Core/Physics/: BoundingBox.cpp  BoundingBox.h  Collision.cpp  Collision.h
Core/Player/: Camera.cpp  Camera.h  Player.cpp  Player.h
Core/Rendering/: BlockModel.cpp  BlockModel.h  Shader.cpp  Shader.h
Core/Shaders/: Block_Fragment.fs  Block_Vertex.vs
Core/Utils/: BlockArray3D.h  ChunkPosition.h  ConfigLoader.cpp  ConfigLoader.h  Logger.cpp  Logger.h  PathUtils.h
Core/World/: BlockModel.cpp  BlockModel.h  Chunk.cpp  Chunk.h  World.cpp  World.h
